<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wang.shenglifei.jeep.activitys.ResultActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/return_btn_description"
            android:id="@+id/return_btn"
            android:src="@drawable/return_btn"
            android:background="@color/transparent" />
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:id="@+id/spot_title"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"/>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/play_btn_description"
            android:id="@+id/spot_voice_btn"
            android:background="@color/transparent"
            android:src="@drawable/volume_mute" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:scrollbars="vertical"
        android:id="@+id/scrollView" >

        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:src="@drawable/yuelushuyuan"
            android:contentDescription="@string/yuelushuyuan_img_description"
            android:id="@+id/imageView" />

        <TextView
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/yuelushuyuan"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/spot_list"
            android:id="@+id/spot_list_btn" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
